[package]
name = "fuck-tools-rs"
version = "0.0.1"
edition = "2024"
authors = ["petlo petlo@foxmail.com"]
license = "MIT OR Apache-2.0"
description = "Fuck Tools"
repository = "https://github.com/petlo/fuck-tools-rs.git"
documentation = "https://github.com/petlo/fuck-tools-rs.git"
readme = "README.md"
categories = ["development-tools"]

[dependencies]
snowflake-rs = { version = "0.1.1" }
chrono = { version = "0.4.42", features = ["serde"] } # 日期支持
uuid = { version = "1.19.0", features = ["v4", "v7", "serde"] } # uuid 支持
ring = { version = "0.17.14", features = ["default"] } # 加密库
hex = { version = "0.4.3", features = ["default"] }
base64 = { version = "0.22.1", features = ["default"] }
md-5 = { version = "0.10.6", features = ["default"] }

# 禁止使用 unsafe 代码
[workspace.lints.rust]
unsafe_code = "forbid"

# 启用 Clippy 的 pedantic 警告组
[workspace.lints.clippy]
pedantic = "warn"

# 发布到 crates.io 的元数据
[package.metadata.docs.rs]

# 文档生成特性
all-features = true
rustdoc-args = ["--cfg", "docsrs"]